--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="signin_button">Sign In</string>
+    <string name="signin_title">Sign In</string>
 </resources>
