add toast and ScrollExample

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_git_ui">GitUiActivity</string>
     <string name="github_ui_title">Ingrese el github user</string>
     <string name="github_ui_button">Buscar</string>
+    <string name="title_activity_main2">MainActivity2</string>
 </resources>
