--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="github_ui_title">Ingrese el github user</string>
     <string name="github_ui_button">Buscar</string>
     <string name="title_activity_main2">MainActivity2</string>
+    <string name="title_activity_vocabulary">VocabularyACtivity</string>
 </resources>
