--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,9 @@
     <string name="title_activity_layout_counter">LayoutCounterActivity</string>
     <string name="title_activity_cour_counter">CourCounterActivity</string>
     <string name="title_activity_flow">FlowActivity</string>
+    <string name="title_activity_background_color">BackgroundColorActivity</string>
+    <string name="btn_yellow">Amarillo</string>
+    <string name="btn_blue">Azul</string>
+    <string name="title_activity_business">BusinessActivity</string>
+    <string name="business_title">Mi aplicacion de negocios</string>
 </resources>
