--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="btn_blue">Azul</string>
     <string name="title_activity_business">BusinessActivity</string>
     <string name="business_title">Mi aplicacion de negocios</string>
+    <string name="title_activity_even_odd">EvenOddActivity</string>
 </resources>
