--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="title_activity_business">BusinessActivity</string>
     <string name="business_title">Mi aplicacion de negocios</string>
     <string name="title_activity_even_odd">EvenOddActivity</string>
+    <string name="title_activity_beauty">BeautyActivity</string>
 </resources>
