--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="title_activity_even_odd">EvenOddActivity</string>
     <string name="title_activity_beauty">BeautyActivity</string>
     <string name="title_activity_scaffold">ScaffoldActivity</string>
+    <string name="title_activity_challenge">ChallengeActivity</string>
 </resources>
