--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="title_activity_scaffold">ScaffoldActivity</string>
     <string name="title_activity_challenge">ChallengeActivity</string>
     <string name="title_activity_book">BookActivity</string>
+    <string name="title_activity_practicing">PracticingActivity</string>
 </resources>
