add viewmodel from macOS

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -16,4 +16,5 @@
         <string name="btn_blue">Blue</string>
         <string name="title_activity_business">BusinessActivity</string>
     <string name="business_title">My business app</string>
+        <string name="btn_increment">Increment</string>
 </resources>
