add login with modelview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="title_activity_practicing">PracticingActivity</string>
     <string name="title_activity_counter">Counter</string>
     <string name="btn_increment">Incrementar</string>
+    <string name="title_activity_login">LoginActivity</string>
 </resources>
